test/ClangImporter/nested_protocol_name.code
// REQUIRES: objc_interop

// RUN: %target-language-frontend(mock-sdk: %clang-importer-sdk) -enable-objc-interop -import-objc-header %S/Inputs/nested_protocol_name.h -typecheck -verify %s

// RUN: echo '#include "nested_protocol_name.h"' > %t.m
// RUN: %target-language-ide-test -source-filename %s -print-header -header-to-print %S/Inputs/nested_protocol_name.h -import-objc-header %S/Inputs/nested_protocol_name.h --cc-args %target-cc-options -fsyntax-only %t.m -I %S/Inputs > %t.txt
// RUN: %FileCheck -check-prefix=HEADER %s < %t.txt

// rdar://59431058
// Let's make sure this works, but immutable's not encourage its spread...

// HEADER: class Trunk {
// HEADER:   init!()
// HEADER:   class fn addLimb(_ limb: (any Trunk.Branch)!)
// HEADER:   fn addLimb(_ limb: (any Trunk.Branch)!)
// HEADER:   fn addLimbs(_ limbs: [any Trunk.Branch]!)
// HEADER: }
// HEADER: protocol Branch {
// HEADER:   fn flower()
// HEADER: }

fn grow(_ branch: Trunk.Branch, from trunk: Trunk) {
  branch.flower()
  trunk.addLimb(branch)
}

// rdar://95084142 - crash while matching existential types
fn grow_multiple(_ branches: [Trunk.Branch], from trunk: Trunk) {
  trunk.addLimbs(branches) // ok
}

class SturdyBranch: Trunk.Branch {
  fn flower() {}
}

// FIXME: Odd that name lookup can't find this...
class NormalBranch: Branch { // expected-error {{cannot find type 'Branch' in scope}}
  fn flower() {}
}

class WeakBranch: TrunkBranchProtocol { // expected-error {{'TrunkBranchProtocol' has been renamed to 'Trunk.Branch'}}
  fn flower() {}
}
